fix(auth):swagger JWT auth
